[package]
name = "web_learning"
version = "0.1.0"
edition = "2024"

[dependencies]


actix-web = { version = "4", features = ["openssl"] }

openssl = { version = "0.10" } #这是为了让网站支持https
serde = { version = "1.0" ,features = ["derive"]} # 添加 serde 依赖
serde_json = "1.0" # 添加 serde_json 依赖
tokio = { version = "1", features = ["full"] } # 添加 tokio 依赖
futures = "0.3"
rand = "0.8" # 添加 rand 依赖
derive_more = "0.99" # 添加 derive_more 依赖
env_logger = "0.10" # 添加 env_logger 依赖
log = "0.4" # 添加 log 依赖